--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,44 +4,47 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-      "dev": "vite",
-      "start": "node server.js",
-      "heroku-postbuild": "npm run build",
-      "build": "vite build",
-      "lint": "eslint .",
-      "preview": "vite preview"
+        "dev": "vite",
+        "start": "node server.js",
+        "heroku-postbuild": "npm run build",
+        "build": "vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
     },
     "dependencies": {
-      "@emotion/react": "^11.14.0",
-      "@emotion/styled": "^11.14.0",
-      "@fontsource/roboto": "^5.1.1",
-      "@mui/icons-material": "^6.3.1",
-      "@mui/material": "^6.4.7",
-      "@mui/x-date-pickers": "^7.27.3",
-      "axios": "^1.7.9",
-      "date-fns": "^2.29.3",
-      "dotenv": "^16.4.7",
-      "express": "^4.21.2",
-      "firebase": "^11.2.0",
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1",
-      "react-input-mask": "^2.0.4",
-      "react-router-dom": "^7.1.1",
-      "styled-components": "^6.1.14",
-      "sweetalert2": "^11.6.13",
-      "web-vitals": "^2.1.2",
-      "yup": "^0.32.11"
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@fontsource/roboto": "^5.1.1",
+        "@mui/icons-material": "^6.3.1",
+        "@mui/material": "^6.4.7",
+        "@mui/x-date-pickers": "^7.27.3",
+        "axios": "^1.7.9",
+        "date-fns": "^2.29.3",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "firebase": "^11.2.0",
+        "jspdf": "^3.0.1",
+        "jspdf-autotable": "^5.0.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-input-mask": "^2.0.4",
+        "react-router-dom": "^7.1.1",
+        "recharts": "^2.15.2",
+        "styled-components": "^6.1.14",
+        "sweetalert2": "^11.6.13",
+        "web-vitals": "^2.1.2",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
-      "@eslint/js": "^9.17.0",
-      "@types/react": "^18.3.18",
-      "@types/react-dom": "^18.3.5",
-      "@vitejs/plugin-react": "^4.3.4",
-      "eslint": "^9.17.0",
-      "eslint-plugin-react": "^7.37.2",
-      "eslint-plugin-react-hooks": "^5.0.0",
-      "eslint-plugin-react-refresh": "^0.4.16",
-      "globals": "^15.14.0",
-      "vite": "^6.0.7"
+        "@eslint/js": "^9.17.0",
+        "@types/react": "^18.3.18",
+        "@types/react-dom": "^18.3.5",
+        "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^9.17.0",
+        "eslint-plugin-react": "^7.37.2",
+        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-refresh": "^0.4.16",
+        "globals": "^15.14.0",
+        "vite": "^6.0.7"
     }
-  }
+}
